--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,10 @@
     <div class="container">
         <header>
             <h1>Nutritional Information App</h1>
+            <p>
+                Welcome to our Nutritional Information App! Easily assess the healthiness of your food choices by simply uploading an image of the ingredients list from any product. Our app utilizes advanced Optical Character Recognition (OCR) technology to extract the ingredients, then seamlessly fetches their nutritional details from a reliable API. With insightful analysis, we provide you with a comprehensive overview, empowering you to make informed decisions about your diet. Discover the true health factor of your favorite foods with just a click!
+            </p>
+            <img src="static/images/pexels.jpg">
         </header>
 
         <section class="upload-section">
